--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,5 +9,11 @@
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
 
+    <form method="post" action="/login">
+    <input type="text" name="username" id="username">
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Log In">
+  </form>
+
   </body>
 </html>
